--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,4 +18,9 @@
   .span {
     @apply relative text-sm font-medium uppercase before:absolute before:inset-x-0 before:-bottom-1.5 before:h-0.5 before:origin-left before:scale-x-0 before:transform before:rounded-bl before:bg-[#f9f9f9] before:transition-all before:duration-200 group-hover:before:scale-x-100;
   }
+
+  .brand{
+    @apply flex relative w-52 h-32 sm:w-64 sm:h-36 border-4 border-white border-opacity-10 rounded-lg cursor-pointer shadow-xl overflow-hidden hover:border-opacity-80 hover:shadow-2xl transform hover:scale-125 transition duration-300;
+  }
+
 }
